src/snapshots/matcha__error__test__public_function_in_for_loop_error.snap
---
source: src/error.rs
expression: "{% for item in list %}\n{> pub fn full_name(second_name: String)\nLucy {{ second_name }}\n{> endfn\n{% endfor %}"
---
Functions must be declared at the top level.

error: 
  ┌─ -test-:2:4
  │
2 │ {> pub fn full_name(second_name: String)
  │    ^^^^^^


